[package]
name = "app_108jobs_db_views_category_person_ban"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
full = [
  "app_108jobs_utils",
  "diesel",
  "diesel-async",
  "app_108jobs_db_schema/full",
  "app_108jobs_db_schema_file/full",
]

[dependencies]
app_108jobs_db_schema = { workspace = true }
app_108jobs_utils = { workspace = true, optional = true }
app_108jobs_db_schema_file = { workspace = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
serde = { workspace = true }
