[package]
name = "lemmy_db_views_chat"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
full = [
  "lemmy_utils",
  "diesel",
  "diesel-async",
  "lemmy_db_schema/full",
  "lemmy_db_schema_file/full",
  "i-love-jesus",
]
ts-rs = ["dep:ts-rs", "lemmy_db_schema/ts-rs"]

[dependencies]
lemmy_db_schema = { workspace = true }
lemmy_db_schema_file = { workspace = true }
lemmy_utils = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
serde = { workspace = true }
chrono = { workspace = true }
ts-rs = { workspace = true, optional = true }
i-love-jesus = { workspace = true, optional = true }

[lints]
workspace = true
