[package]
name = "app_108jobs_db_views_custom_emoji"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
full = [
  "app_108jobs_core",
  "diesel",
  "diesel-async",
  "app_108jobs_db/full",
]
ts-rs = ["dep:ts-rs", "app_108jobs_db/ts-rs"]

[dependencies]
app_108jobs_db = { workspace = true }
app_108jobs_core = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
serde = { workspace = true }
serde_with = { workspace = true }
ts-rs = { workspace = true, optional = true }
url = { workspace = true }
