[package]
name = "app_108jobs_db_views_post"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
full = [
    "app_108jobs_utils",
    "diesel",
    "diesel-async",
    "i-love-jesus",
    "app_108jobs_db_schema/full",
    "app_108jobs_db_schema_file/full",
    "app_108jobs_db_views_category/full",
    "app_108jobs_db_views_vote/full",
    "url",
]
ts-rs = [
    "dep:ts-rs",
    "app_108jobs_db_schema/ts-rs",
    "app_108jobs_db_schema_file/ts-rs",
    "app_108jobs_db_views_category/ts-rs",
    "app_108jobs_db_views_vote/ts-rs",
]

[dependencies]
app_108jobs_db_schema = { workspace = true }
app_108jobs_utils = { workspace = true, optional = true }
app_108jobs_db_schema_file = { workspace = true }
app_108jobs_db_views_category = { workspace = true }
app_108jobs_db_views_vote = { workspace = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
serde = { workspace = true }
serde_with = { workspace = true }
ts-rs = { workspace = true, optional = true }
i-love-jesus = { workspace = true, optional = true }
chrono = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, optional = true }
slug = { workspace = true }

[dev-dependencies]
app_108jobs_db_views_local_user = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true }
pretty_assertions = { workspace = true }
url = { workspace = true }
test-context = "0.4.1"
