[package]
name = "app_108jobs_db_views_rider"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
full = [
    "app_108jobs_core",
    "diesel",
    "diesel-async",
    "i-love-jesus",
    "app_108jobs_db/full",
    "app_108jobs_db/full",
]

ts-rs = [
    "dep:ts-rs",
    "app_108jobs_db/ts-rs",
    "app_108jobs_db/ts-rs",
]

[dependencies]
app_108jobs_db = { workspace = true }
app_108jobs_core = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
serde = { workspace = true }
i-love-jesus = { workspace = true, optional = true }
chrono = { workspace = true }
serde_with = { workspace = true }


[dev-dependencies]
serial_test = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
app_108jobs_db = { workspace = true, features = ["full", "test-utils"] }

[lints]
workspace = true
