[package]
name = "app_108jobs_db_views_search_combined"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
full = [
  "app_108jobs_core",
  "diesel",
  "diesel-async",
  "i-love-jesus",
  "app_108jobs_db/full",
  "app_108jobs_db_views_post/full",
  "app_108jobs_db_views_proposal/full",
  "app_108jobs_db_views_category/full",
  "app_108jobs_db_views_person/full",
]
ts-rs = [
  "dep:ts-rs",
  "app_108jobs_db/ts-rs",
  "app_108jobs_db_views_proposal/ts-rs",
  "app_108jobs_db_views_category/ts-rs",
  "app_108jobs_db_views_person/ts-rs",
  "app_108jobs_db_views_post/ts-rs",
]

[dependencies]
app_108jobs_db_views_post = { workspace = true }
app_108jobs_db_views_proposal = { workspace = true }
app_108jobs_db_views_category = { workspace = true }
app_108jobs_db_views_person = { workspace = true }
app_108jobs_db_views_local_user = { workspace = true }
app_108jobs_db_views_rider = { workspace = true }
app_108jobs_db = { workspace = true }
app_108jobs_core = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
serde = { workspace = true }
ts-rs = { workspace = true, optional = true }
i-love-jesus = { workspace = true, optional = true }
serde_with = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
